Aligned types with openapi spec
